# z-cognition

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: bdi_agent.rs
src/: lib.rs
src/bdi/: bdi_agent.rs
src/decision/: utility.rs
src/reasoning/: engine.rs
tests/: bdi_tests.rs
