[package]
name = "z-cognition"
version = "0.1.0"
edition = "2021"
authors = ["ZeroicAI <devzeroicai@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Reasoning, planning, BDI architecture, and decision-making for agents"
repository = "https://github.com/ZeroicAI/z-cognition"
documentation = "https://docs.rs/z-cognition"
keywords = ["agents", "bdi", "planning", "reasoning", "ai"]
categories = ["simulation", "algorithms"]
readme = "README.md"

[dependencies]
z-core = { git = "https://github.com/ZeroicAI/z-core", branch = "main" }

async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
